prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coordinator-api-service
spec:
  selector:
    app: coordinator-api-server
  ports:
    - protocol: TCP
      port: 30008
      targetPort: 30008
      nodePort: 30008
  type: NodePort
