prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinator-api-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: coordinator-api-server.app.fcgm.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coordinator-api-service
            port:
              number: 30008
